Fixed overview in page content editor, larger padding in tables, jumps to right control when editing, widen editor area

--- a/servers/cms/public/stylesheets/tinymcepreview.css
+++ b/servers/cms/public/stylesheets/tinymcepreview.css
@@ -1,3 +1,7 @@
+p {
+	font-size: 12px;
+}
+
 .updated {
 	color: red;
 }
@@ -25,4 +29,8 @@ p.indent {
 .facts p.indent {
 	text-indent: 15px;
 	margin: 0;
+}
+
+td {
+	padding: 15px;
 }
